--- a/texto.html
+++ b/texto.html
@@ -120,7 +120,11 @@
                 <a href="index.html" class="navbar-brand">
                     <h1 class="m-0 text-uppercase text-white"> </h1>
                 </a>
-                <p class="mt-4" id="textinho">.</p>
+                <p class="mt-4" id="textinho">
+                Bom, desde que a gente começou a conversar e a gente começou a pegar intimidade, você vem se tornando a pessoa mais incrivel que eu conheço e a cada dia que se passa eu vejo isso, cada minuto, cada momento que eu passo ao seu lado é especial, você me faz feliz cada dia mas; lógico tem dias que eu fico meio inseguro sobre a gente mas isso é passageiro.
+                <br>Espero que você saiba que você é uma pessoa maravilhosa para mim, uma pessoa que tem uma estrema importância para mim e para a minha vida, apesar da incerteza do nosso futuro pode ter certeza que vou fazer de tudo para ficar ao seu lado e te demonstrar cada dia mas que eu te amo imensamente.
+                <br>"Não importa aonde esteja,ou o que esteja fazendo, ou com quem esteja, eu vou sempre, verdadeiramente, completamente, amar você"
+                <br>Feito por: Paulo Cotrim.</p>
             </div>
 
             <!--
