--- a/texto.html
+++ b/texto.html
@@ -122,9 +122,20 @@
                 </a>
                 <p class="mt-4" id="textinho">
                 Bom, desde que a gente começou a conversar e a gente começou a pegar intimidade, você vem se tornando a pessoa mais incrivel que eu conheço e a cada dia que se passa eu vejo isso, cada minuto, cada momento que eu passo ao seu lado é especial, você me faz feliz cada dia mas; lógico tem dias que eu fico meio inseguro sobre a gente mas isso é passageiro.
-                <br>Espero que você saiba que você é uma pessoa maravilhosa para mim, uma pessoa que tem uma estrema importância para mim e para a minha vida, apesar da incerteza do nosso futuro pode ter certeza que vou fazer de tudo para ficar ao seu lado e te demonstrar cada dia mas que eu te amo imensamente.
-                <br>"Não importa aonde esteja,ou o que esteja fazendo, ou com quem esteja, eu vou sempre, verdadeiramente, completamente, amar você"
-                <br>Feito por: Paulo Cotrim.</p>
+
+<br>Espero que você saiba que você é uma pessoa maravilhosa para mim, uma pessoa que tem uma estrema importância para mim e para a minha vida, apesar da incerteza do nosso futuro pode ter certeza que vou fazer de tudo para ficar ao seu lado e te demonstrar cada dia mas que eu te amo imensamente.
+
+<br>E sim, você é linda linda linda, muito linda, seu olhos são lindos, suas pintas no rosto são lindas, suas sardinhas são lindas, seu cabelo é lindo, seu nariz e perfeito, sua boquinha e muito lindinha também, tudo em você é lindo incrível isso, mas não é apenas isso que te faz uma pessoa linda e maravilhosa, o cuidado que você tem consigo mesma te faz uma pessoa linda, a vontade e dedicação que você tem com as coisas também te faz uma pessoa linda, a sua organização te faz uma pessoa linda, o seu jeito é lindo.
+
+<br><br>E aqui vai duas frases que eu penso bastante e lembro de você.
+
+<br>“Minha felicidade tem cabelo cacheado e sardinha”  
+
+<br>"Não importa aonde esteja, ou o que esteja fazendo, ou com quem esteja, eu vou sempre, verdadeiramente, completamente, amar você"
+
+<br><br>Eu te amo só um pouquinho
+
+<br><br><br>Feito por: Paulo Cotrim.</p>
             </div>
 
             <!--
