--- a/texto.html
+++ b/texto.html
@@ -112,7 +112,7 @@
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
                 <h2 class="text-primary font-secondary">Ana Carolina Mateus</h2>
-                <h1 class="display-4 text-uppercase">Textinho só para você</h1>
+                <h1 class="display-4 text-uppercase">Textinho para você</h1>
             </div>
             
 
