--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <!--<a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>-->
                 <a href="album.html" class="nav-item nav-link">Álbum</a>
                 <a href="texto.html" class="nav-item nav-link">Textinho <3</a>
+                <a href="album.html" class="nav-item nav-link">Loading</a>
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
